Try fixing problem with the image too much height.

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -155,7 +155,7 @@ body {
 .about-us__img {
     width: 100%;
     height: auto;
-    // max-height: 376px;
+    max-height: 376px;
 }
 
 .about-us__desc-container {
